# aimp_yandexmusic

./: CMakeLists.txt  README.md
patches/: fix_api_submodules.patch
src/: Config.cpp  Config.h  Library.cpp  Library.h  OptionsDialog.cpp  OptionsDialog.h  Plugin.cpp  Plugin.h
src/MusicLibrary/: DataStorage.cpp  DataStorage.h  GroupingTreeDataProvider.cpp  GroupingTreeDataProvider.h  GroupingTreeDataProviderSelection.cpp  GroupingTreeDataProviderSelection.h
src/helpers/: AIMPString.cpp  AIMPString.h  CallbackChangeHandler.h  IUnknownBridge.h
